@@ -930,7 +930,7 @@ end
 Ymib = double(Ymib); 
 
 % Amap parameters 
-n_iters = 16; sub = round(16/min(vx_vol)); n_classes = 3; pve = 5; % default sub=16 lead to errors in highres data!
+n_iters = 16; sub = round(16/min(vx_vol)); n_classes = 3; pve = 5; % default sub=16 caused errors with highres data!
 bias_fwhm = 60; init_kmeans = 0; 
 
 if job.extopts.mrf~=0
